--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
-task hello {
-    doLast {
-        println 'Hello Gradle'
-    }
+mainClassName = 'RunBot'
+
+task execute(type: JavaExec) {
+    main = 'RunBot'
+    classpath = sourceSets.main.runtimeClasspath
 }
+
+defaultTasks 'execute'
 
 dependencies {
     compile 'net.dv8tion:JDA:3.0.BETA2_108'
@@ -12,5 +16,7 @@ dependencies {
 }
 
 repositories {
-    jcenter()
+    jcenter {
+        url 'http://jcenter.bintray.com/'
+    }
 }
