--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,22 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'RunBot'
+// Tell gradle that we want Java 8.
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+// set it to use src/ for source code
+sourceSets {
+    main {
+        java.srcDirs = ["src"]
+        output.classesDir = "$buildDir/classes"
+    }
+}
+
+mainClassName = 'bot.RunBot'
 
 task execute(type: JavaExec) {
-    main = 'RunBot'
+    main = 'bot.RunBot'
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -13,6 +25,11 @@ defaultTasks 'execute'
 dependencies {
     compile 'net.dv8tion:JDA:3.0.BETA2_108'
     compile 'com.sedmelluq:lavaplayer:1.1.45'
+    compile 'com.memetix:microsoft-translator-java-api:0.6.2'
+    compile 'mysql:mysql-connector-java:5.1.39'
+    compile 'org.kohsuke:github-api:1.76'
+    compile 'org.codehaus.groovy:groovy-all:2.4.6'
+    compile 'com.google.code.gson:gson:2.6.1'
 }
 
 repositories {
